<?xml version="1.0"?>
<package>
  <name>pr2_surrogate</name>
  <version>0.0.0</version>
  <description>The pr2_surrogate package allows you to make a PR2
               into a surrogate for your physical body using the Oculus RIFT HMD
               and Razer Hydra controller.</description>

  <maintainer email="dgossow@willowgarage.com">David Gossow</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/pr2_surrogate</url> -->

  <author email="dgossow@willowgarage.com">David Gossow</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>razer_hydra</run_depend>
  <run_depend>actionlib</run_depend>

  <run_depend>pr2_teleop</run_depend>
  <run_depend>audio_capture</run_depend>
  <run_depend>audio_play</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>robot_mechanism_controllers</run_depend>
  <run_depend>openni_camera</run_depend>
  <run_depend>rviz_oculus</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>


</package>
